Fix layout on mobile

--- a/assets/css/application.scss
+++ b/assets/css/application.scss
@@ -2,8 +2,11 @@ html, body {
   height: 100%;
   overscroll-behavior: none;
 }
-/* TODO: sass doesn't minify color name like yui; maybe we need to configure sth */
-div.active > h3 {color:red}
+
+div.active > h4 {
+  color: red;
+}
+
 [ng-click], [data-ng-click], [x-ng-click] {
     cursor: pointer;
 }
